packages/svelte/tests/validator/samples/declaration-tag-placement/input.svelte
<script>
  export let a;
</script>

{let b = a + 1}
