packages/svelte/tests/compiler-errors/samples/legacy-no-const-assignment/main.svelte
<script>
	const a = createCounter();
	a += 1;
</script>
